@@ -1,3 +1,6 @@
+18 Aug 2008 - svn revision 646
+[ Sreyas Kurumanghat <k.sreyas@gmail.com ]
+	- Added pango support and rendering to practice game.
 
 3 Aug 2008 - svn revision 599
 [ Sreyas Kurumanghat <k.sreyas@gmail.com ]
